--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0"
   },
+   "engines" : { 
+    "npm" : ">=7.0.0",
+    "node" : ">=16.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
