--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "react-scripts": "3.4.0"
   },
    "engines" : { 
-    "npm" : ">=7.0.0",
-    "node" : ">=16.0.0"
+    "npm" : "7.0.0",
+    "node" : "16.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
